--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.4",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "concurrently": "^8.2.2",
@@ -58,6 +59,7 @@
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
     "prisma": "^5.7.1",
+    "supertest": "^7.1.3",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
