--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -6,7 +6,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch server.ts",
-    "build": "tsc -p ../tsconfig.backend.json",
+    "build": "tsc -p ../../tsconfig.backend.json",
     "start": "node dist/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
