--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,25 +13,25 @@
     "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
-    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@reduxjs/toolkit": "^2.0.1",
+    "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "firebase": "^10.7.1",
+    "lucide-react": "^0.302.0",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
-    "firebase": "^10.7.1",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "clsx": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
     "tailwind-merge": "^2.2.0",
-    "lucide-react": "^0.302.0",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-toast": "^1.1.5"
+    "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
