--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,15 @@ CORS_ORIGINS="http://localhost:3000,http://localhost:5173"
 
 # Logging
 LOG_LEVEL="debug"
+
+# -----------------------------------------------------------------------------
+# Frontend Firebase Configuration (Vite)
+# These variables must be prefixed with VITE_ to be exposed to the browser.
+# -----------------------------------------------------------------------------
+VITE_FIREBASE_API_KEY="your-frontend-firebase-api-key"
+VITE_FIREBASE_AUTH_DOMAIN="your-project-id.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="your-firebase-project-id"
+VITE_FIREBASE_STORAGE_BUCKET="your-project-id.appspot.com"
+VITE_FIREBASE_MESSAGING_SENDER_ID="your-messaging-sender-id"
+VITE_FIREBASE_APP_ID="your-web-app-id"
+VITE_FIREBASE_MEASUREMENT_ID="your-measurement-id"
