--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "db:migrate": "cd prisma && npx prisma migrate dev",
     "db:studio": "cd prisma && npx prisma studio",
     "db:seed": "cd prisma && npx prisma db seed",
+    "script:associate-boards": "npx prisma generate && tsx scripts/associate-boards.ts",
     "docker:build": "docker build -t driftboard .",
     "docker:run": "docker run -p 8000:8000 -v ./data:/app/data driftboard",
     "prepare": "husky install"
@@ -36,6 +37,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^11.10.0",
     "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
