docs: a blank line in copilot-instructions for human readability, fixed prisma scripts in package.json

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "db:generate": "cd prisma && npx prisma generate",
-    "db:migrate": "cd prisma && npx prisma migrate dev",
-    "db:studio": "cd prisma && npx prisma studio",
-    "db:seed": "cd prisma && npx prisma db seed",
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate dev",
+    "db:studio": "npx prisma studio",
+    "db:seed": "npx prisma db seed",
     "script:associate-boards": "npx prisma generate && tsx scripts/associate-boards.ts",
     "docker:build": "docker build -t driftboard .",
     "docker:run": "docker run -p 8000:8000 -v ./data:/app/data driftboard",
