feat(data): implement data versioning and archiving strategy
This commit introduces a non-destructive data management system using an active/inactive status approach to enhance data resilience and provide a clear audit trail.

Key changes include:
- Updated the Prisma schema to add versioning fields (`status`, `version`, and a unique entity ID) to the `User`, `Board`, `List`, and `Card` models.
- Created migrations to apply the schema changes and a script to backfill data for existing records.
- Refactored the backend API (boards, lists, cards) to handle the new versioning logic. Updates now create new record versions, and deletes mark records as inactive.
- Updated frontend components (`Board`, `List`, `KanbanCard`, `BoardCard`) to use the new entity IDs for all operations.
- Modified the RTK Query API definition to align with the backend changes.
- Refactored the integration test setup to handle authentication mocking and adapt tests to the new

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "db:migrate": "npx prisma migrate dev",
     "db:studio": "npx prisma studio",
     "db:seed": "npx prisma db seed",
+    "db:populate-versioning": "npx prisma generate && tsx prisma/populate-versioning-fields.ts",
     "script:associate-boards": "npx prisma generate && tsx scripts/associate-boards.ts",
     "docker:build": "docker build -t driftboard .",
     "docker:run": "docker run -p 8000:8000 -v ./data:/app/data driftboard",
