--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "cd src/backend && npm start",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "vitest run",
-    "test:integration": "vitest run tests/integration",
+    "test:integration": "NODE_ENV=test vitest run tests/integration",
     "test:e2e": "npx playwright test --project=api-tests",
     "test:e2e:ui": "npx playwright test --ui",
     "test:e2e:headed": "npx playwright test --headed",
