--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "vitest run",
     "test:integration": "NODE_ENV=test vitest run tests/integration",
-    "test:e2e": "npx playwright test --project=api-tests",
+    "test:e2e:basics": "npx playwright test tests/e2e/test_user.basics.spec.ts --reporter=list",
+    "test:e2e": "npx playwright test",
     "test:e2e:ui": "npx playwright test --ui",
     "test:e2e:headed": "npx playwright test --headed",
     "test:watch": "vitest",
@@ -39,7 +40,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^11.10.0",
-    "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.6"
@@ -62,6 +62,7 @@
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "firebase-admin": "^13.4.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
